@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2893 2019/08/09 19:10:28 brook Exp $
+# $NetBSD: Makefile,v 1.2894 2019/08/09 19:11:22 brook Exp $
 #
 
 COMMENT=	Development utilities
@@ -40,6 +40,7 @@ SUBDIR+=	R-magrittr
 SUBDIR+=	R-memoise
 SUBDIR+=	R-pkgbuild
 SUBDIR+=	R-pkgconfig
+SUBDIR+=	R-pkgload
 SUBDIR+=	R-plogr
 SUBDIR+=	R-proto
 SUBDIR+=	R-purrr
